# aidoku-community-sources

src/rust/zh.happymh/: Cargo.toml
src/rust/zh.happymh/res/: filters.json  source.json
src/rust/zh.happymh/src/: lib.rs
src/rust/zh.happymh/src/helper/: url.rs
src/rust/zh.yandanshe/: Cargo.toml
src/rust/zh.yandanshe/res/: filters.json  settings.json  source.json
src/rust/zh.yandanshe/src/: lib.rs
src/rust/zh.yandanshe/src/helper/: image.rs  mod.rs  setting.rs  url.rs
