[package]
name = "yandanshe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers"] }
regex = { version = "1.11.0", default-features = false, features = ["unicode"] }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
